; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm_power.c_iwm_mvm_enable_beacon_filter.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm_power.c_iwm_mvm_enable_beacon_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwm_softc = type { i32 }
%struct.iwm_vap = type { i32 }
%struct.iwm_beacon_filter_cmd = type { i32, i32 }

@IWM_BF_CMD_CONFIG_DEFAULTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iwm_mvm_enable_beacon_filter(%struct.iwm_softc* %0, %struct.iwm_vap* %1) #0 {
  %3 = alloca %struct.iwm_softc*, align 8
  %4 = alloca %struct.iwm_vap*, align 8
  %5 = alloca %struct.iwm_beacon_filter_cmd, align 4
  store %struct.iwm_softc* %0, %struct.iwm_softc** %3, align 8
  store %struct.iwm_vap* %1, %struct.iwm_vap** %4, align 8
  %6 = getelementptr inbounds %struct.iwm_beacon_filter_cmd, %struct.iwm_beacon_filter_cmd* %5, i32 0, i32 0
  %7 = call i32 @htole32(i32 1)
  store i32 %7, i32* %6, align 4
  %8 = getelementptr inbounds %struct.iwm_beacon_filter_cmd, %struct.iwm_beacon_filter_cmd* %5, i32 0, i32 1
  store i32 0, i32* %8, align 4
  %9 = load %struct.iwm_softc*, %struct.iwm_softc** %3, align 8
  %10 = load %struct.iwm_vap*, %struct.iwm_vap** %4, align 8
  %11 = call i32 @_iwm_mvm_enable_beacon_filter(%struct.iwm_softc* %9, %struct.iwm_vap* %10, %struct.iwm_beacon_filter_cmd* %5)
  ret i32 %11
}

declare dso_local i32 @htole32(i32) #1

declare dso_local i32 @_iwm_mvm_enable_beacon_filter(%struct.iwm_softc*, %struct.iwm_vap*, %struct.iwm_beacon_filter_cmd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
